# cxx-modules

./: .clang-tidy  .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml
module00/: .gitignore  CMakeLists.txt
module00/ex00/: CMakeLists.txt  Makefile  megaphone  megaphone.cpp
module00/ex01/: CMakeLists.txt  Command.cpp  Command.hpp  Contact.cpp  Contact.hpp  FormattedInput.cpp  FormattedInput.h  Makefile  PhoneBook.cpp  PhoneBook.hpp  main.cpp
module00/ex01/phone_book.dSYM/Contents/: Info.plist
module00/ex01/phone_book.dSYM/Contents/Resources/Relocations/aarch64/: phone_book.yml
module00/ex02/: Account.cpp  Account.hpp  CMakeLists.txt  Makefile  accounting  compile_commands.json  tests.cpp
module00/ex02/.cache/clangd/index/: Account.cpp.E7E2C5779E6BCDC3.idx  Account.hpp.DF7C0CB973F0177D.idx  tests.cpp.7A235DBCBCE22AC0.idx
module01/: .gitignore  CMakeLists.txt
module01/ex00/: .gitignore  CMakeLists.txt  Makefile  Zombie.cpp  Zombie.hpp  main.cpp  newZombie.cpp  randomChump.cpp
module01/ex01/: CMakeLists.txt  Makefile  Zombie.cpp  Zombie.hpp  main.cpp  zombieHorde.cpp
module01/ex02/: CMakeLists.txt  Makefile  main.cpp
module01/ex03/: CMakeLists.txt  HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  main.cpp
module01/ex04/: CMakeLists.txt  Config.cpp  Config.hpp  Makefile  Makefile.replace  main.cpp
module01/ex05/: CMakeLists.txt  Harl.cpp  Harl.hpp  Makefile  main.cpp
module01/ex06/: CMakeLists.txt  Harl.cpp  Harl.hpp  Makefile  main.cpp
module02/: .gitignore  CMakeLists.txt
module02/ex00/: CMakeLists.txt  Fixed.cpp  Fixed.hpp  Makefile  main.cpp
module02/ex01/: CMakeLists.txt  Fixed.cpp  Fixed.hpp  Makefile  main.cpp
module02/ex02/: CMakeLists.txt  Fixed.cpp  Fixed.hpp  Fixed_arithmetic.cpp  Makefile  main.cpp
module02/ex03/: CMakeLists.txt  Fixed.cpp  Fixed.hpp  Makefile  Point.cpp  Point.hpp  bsp.cpp  main.cpp
module03/: .gitignore  CMakeLists.txt
module03/ex00/: CMakeLists.txt  ClapTrap.cpp  ClapTrap.hpp  Makefile  main.cpp
module03/ex01/: CMakeLists.txt  ClapTrap.cpp  ClapTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
module03/ex02/: CMakeLists.txt  ClapTrap.cpp  ClapTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  main.cpp
module03/ex03/: CMakeLists.txt  ClapTrap.cpp  DiamondTrap.cpp  DiamondTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
module04/: .gitignore  CMakeLists.txt
module04/ex00/: Animal.cpp  Animal.hpp  CMakeLists.txt  Cat.cpp  Dog.cpp  LogFunction.hpp  Makefile  WrongAnimal.cpp  WrongAnimal.hpp  WrongCat.cpp  WrongCat.hpp  WrongDog.cpp  WrongDog.hpp  main.cpp
module04/ex01/: Animal.hpp  Brain.cpp  Brain.hpp  CMakeLists.txt  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  WrongAnimal.hpp  WrongCat.hpp  WrongDog.hpp  main.cpp
module04/ex02/: Animal.hpp  Brain.cpp  CMakeLists.txt  Cat.cpp  Makefile  main.cpp
module04/ex03/: CMakeLists.txt  Makefile  main.cpp  materia  materias
module04/ex03/Character/: Character.cpp  Character.hpp  ICharacter.cpp  ICharacter.hpp
module04/ex03/Materia/: AMateria.cpp  AMateria.hpp  Cure.cpp  Cure.hpp  IMateriaSource.cpp  IMateriaSource.hpp  Ice.cpp  Ice.hpp  MateriaSource.cpp  MateriaSource.hpp
module04/ex03/PtrVec/: PtrVec.cpp  PtrVec.hpp
module05/: .gitignore
module05/ex00/: Bureaucrat.cpp  Bureaucrat.hpp  Makefile  main.cpp
module05/ex01/: Bureaucrat.cpp  Bureaucrat.hpp  Form.cpp  Form.hpp  main.cpp
module05/ex02/: AForm.cpp  AForm.hpp  Bureaucrat.cpp  Form.cpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
module05/ex03/: AForm.cpp  AForm.hpp  Bureaucrat.hpp  Intern.cpp  Intern.hpp  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
